--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,23 @@
-* {
+*{
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
-body {
+body{
     background-color: #f6f8fc;
 }
 
-.content {
-    width: 100vw;
-    height: 100vh;
+.content{
     padding: 1rem;
-    background-color: #fff;
+    background-color: white;
+    height: 100vh;
 }
 
 @media screen and (min-width: 992px) {
-    .content {
+    .content{
         max-width: 992px;
+        margin: 0 auto;
         height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
+
     }
 }
