--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,157 @@
-.pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
+.pokemons{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
     list-style: none;
+    padding:0;
+    margin:0;
 }
 
-.normal {
-    background-color: #a6a877;
+.normal{
+    background-color: #a6a077;
+}
+.grass{
+    background-color: #61e1ca;
 }
 
-.grass {
-    background-color: #77c850;
+.fire{
+    background-color: #ee7f30
 }
 
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
+.water{
     background-color: #678fee;
 }
-
-.electric {
+.electric{
     background-color: #f7cf2e;
 }
-
-.ice {
+.ice{
     background-color: #98d5d7;
 }
-
-.ground {
+.ground{
     background-color: #dfbf69;
 }
-
-.flying {
+.flying{
     background-color: #a98ff0;
 }
-
-.poison {
+.poison{
     background-color: #a040a0;
 }
-
-.fighting {
+.fighting{
     background-color: #bf3029;
 }
-
-.psychic {
+.psychic{
     background-color: #f65687;
 }
-
-.dark {
+.dark{
     background-color: #725847;
 }
-
-.rock {
+.rock{
     background-color: #b8a137;
 }
-
-.bug {
+.bug{
     background-color: #a8b720;
 }
-
-.ghost {
+.ghost{
     background-color: #6e5896;
 }
-
-.steel {
+.steal{
     background-color: #b9b7cf;
 }
-
-.dragon {
+.dragon{
     background-color: #6f38f6;
 }
-
-.fairy {
+.fairy{
     background-color: #f9aec7;
 }
 
-.pokemon {
-    display: flex;
+@media screen and (min-width: 300px) {
+    .pokemons{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (min-width: 380px) {
+    .pokemons{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+
+@media screen and (min-width: 576px) {
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+.pokemon{
+    display:flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
+    margin:.5rem;
+    padding:1rem;
     border-radius: 1rem;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
+.pokemon .number{
+    color: black;
+    opacity: 0.3;
     text-align: right;
     font-size: .625rem;
 }
 
-.pokemon .name {
+.pokemon .name{
+    color:white;
+    margin-bottom: 1rem;
     text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
 }
 
-.pokemon .detail {
+.pokemon .detail{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
+.pokemon .detail .types{
+    padding:0;
+    margin:0;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
+.pokemon .detail .types .type{
+    color: white;
+    padding: .35rem .5rem;
+    margin: .250rem;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
+    filter: brightness(1.1)
 }
 
-.pokemon .detail img {
+.pokemon .detail img{
     max-width: 100%;
     height: 70px;
 }
 
-.pagination {
-    display: flex;
+.pagination{
+    display:flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items:center;
     width: 100%;
     padding: 1rem;
 }
-
-.pagination button {
+.pagination button{
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
-    color: #fff;
+    color: white;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
-}
-
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+   
 }
